move to workspace, add serialization proc macro
- split project into subprojects within a single cargo workspace.
  this makes the code more modular, but is actually necessary to
  implement proc macros.

- implement proc macro for serialization (`serialize-macro`), which
  infinitely simplifies custom layer implementations. proc macros also
  are the foundation for automatically discovering which structs
  implement the `Serialized` trait, again simplifying custom layers.

- moved a bunch of code around the project.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
-[package]
-name = "neural-network"
-version = "0.1.0"
-edition = "2021"
+[workspace]
 
-[dependencies]
-colored = "2.1.0"
-ctrlc = "3.4.4"
-rand = "0.8.5"
+members = [
+	"app", 
+	"neural-network",
+	"serialize-macro", 
+	"math", 
+	"serialization",
+]
